tests/neg-custom-args/captures/cc-this.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this.scala:11:15 --------------------------------------
11 |    val y: C = this // error
   |               ^^^^
   |               Found:    (C.this : C^{C.this.x})
   |               Required: C
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/cc-this.scala:13:15 -----------------------------------------------------------
13 |  class C2(val x: () => Int): // error
   |               ^
   |    reference (C2.this.x : () => Int) is not included in the allowed capture set {} of the self type of class C2
-- Error: tests/neg-custom-args/captures/cc-this.scala:20:8 ------------------------------------------------------------
20 |  class C4(val f: () => Int) extends C3 // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |reference (C4.this.f : () => Int) captured by this self type is not included in the allowed capture set {} of pure base class class C3
-- Error: tests/neg-custom-args/captures/cc-this.scala:34:8 ------------------------------------------------------------
34 |  def c3 = c2.y // error
   |        ^
   |      Separation failure: method c3's inferred result type C{val x: () => Int}^{cc} hides non-local parameter cc
